# Energy-Price-Prediction-BTW-2025

./: README.md  main.py  pyproject.toml  requirements.txt  submission_group_2.ipynb
config/: config.yaml
notebook/: submission_group_2.ipynb
notebooks/: submission_group_2.ipynb
