[project]
name = "energy-price-prediction-btw-2025"
version = "0.1.0"
description = "Energy price forecasting pipeline for the BTW 2025 Data Science Challenge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.33",
    "category-encoders>=2.8.1",
    "evidently>=0.7.12",
    "fastapi>=0.116.1",
    "great-expectations>=1.5.9",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.2",
    "mlflow>=3.3.1",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "optuna>=4.0.0",
    "pandas>=2.2.3",
    "polars>=1.13.1",
    "pytest>=8.3.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
    "xgboost>=2.1.2",
]
